fix queue-additional-subscriptions with DTE consumer